remove cardService from aiService